--- a/style.css
+++ b/style.css
@@ -107,6 +107,22 @@ h1, h2, h3, h4, h5 {
         color: var(--lime);
         font-size: var(--h5);
     }
+
+    @media (min-width: 800px) {
+        .wrapper {
+            max-width: 800px;
+            padding: 0 2rem; 
+        }
+    
+        main {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+        }
+    
+        main h1 {
+            grid-area: 1 / 1 / 2 / 4;
+        }
+    }
 }
 
 @layer reviews {
@@ -122,8 +138,12 @@ h1, h2, h3, h4, h5 {
     margin-top: -15px;
     font-style: normal;
    }
+   @media (min-width: 800px) {
+      aside {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+      }
+   }
 }
 
-@layer footer {
-    
-}
